[gd_scene load_steps=10 format=3 uid="uid://beiwp55sej6c6"]

[ext_resource type="Texture2D" uid="uid://co6ahd65nrh3f" path="res://Art/title_screen_2.png" id="1_08bbr"]
[ext_resource type="Script" path="res://Menus/main_menu.gd" id="2_cnbh6"]
[ext_resource type="PackedScene" uid="uid://db5ta8cqxsv8u" path="res://Art/Scenes/button.tscn" id="3_jemal"]
[ext_resource type="Texture2D" uid="uid://wb1u5d3floyh" path="res://Art/sky_sprite.png" id="3_prjag"]
[ext_resource type="FontFile" uid="uid://dmikmi7dppnjy" path="res://Art/Fonts/Copyduck.otf" id="4_4l1p0"]
[ext_resource type="Texture2D" uid="uid://bm6pte0xpviw6" path="res://Art/crow_sprite.png" id="5_hx8ea"]
[ext_resource type="Texture2D" uid="uid://drxummxipy72e" path="res://Art/scarecrow_idle_frame_01_sprite.png" id="6_f2nee"]
[ext_resource type="Texture2D" uid="uid://dxspd7dt14rbv" path="res://Art/cloud_01_sprite.png" id="7_s45xl"]

[sub_resource type="LabelSettings" id="LabelSettings_pcii6"]
font = ExtResource("4_4l1p0")
font_size = 98

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_08bbr")
expand_mode = 1
stretch_mode = 6

[node name="Button" parent="TextureRect" instance=ExtResource("3_jemal")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 500.0
offset_top = 390.0
offset_right = -505.0
offset_bottom = -216.0
grow_horizontal = 2
grow_vertical = 2
text = "Start"
flat = true

[node name="Button2" parent="TextureRect" instance=ExtResource("3_jemal")]
layout_mode = 0
offset_left = 500.0
offset_top = 490.0
offset_right = 647.0
offset_bottom = 532.0
text = "Quit"
flat = true

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_prjag")
expand_mode = 1

[node name="Label" type="Label" parent="TextureRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -216.0
grow_horizontal = 2
grow_vertical = 2
text = "There crow!"
label_settings = SubResource("LabelSettings_pcii6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="TextureRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 89.0
offset_bottom = -127.0
grow_horizontal = 2
grow_vertical = 2
text = "You win!"
label_settings = SubResource("LabelSettings_pcii6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect3" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -310.0
offset_top = -22.0
offset_right = 82.0
offset_bottom = 657.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("5_hx8ea")

[node name="TextureRect4" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = -161.0
offset_right = 477.0
offset_bottom = 518.0
grow_vertical = 2
texture = ExtResource("6_f2nee")

[node name="TextureRect5" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 536.0
offset_top = -89.0
offset_right = 94.0
offset_bottom = -509.0
grow_vertical = 2
texture = ExtResource("7_s45xl")

[node name="TitleScreen2" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_08bbr")
centered = false
script = ExtResource("2_cnbh6")

[node name="Button" parent="." instance=ExtResource("3_jemal")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 500.0
offset_top = 390.0
offset_right = -505.0
offset_bottom = -216.0
grow_horizontal = 2
grow_vertical = 2
text = "Main"
flat = true

[node name="Button2" parent="." instance=ExtResource("3_jemal")]
layout_mode = 0
offset_left = 500.0
offset_top = 490.0
offset_right = 647.0
offset_bottom = 532.0
text = "Quit"
flat = true

[connection signal="pressed" from="TextureRect/Button" to="TitleScreen2" method="_on_start_button_pressed"]
[connection signal="pressed" from="TextureRect/Button2" to="TitleScreen2" method="_on_button_2_pressed"]
[connection signal="pressed" from="Button" to="TitleScreen2" method="_on_main_button_pressed"]
[connection signal="pressed" from="Button2" to="TitleScreen2" method="_on_button_2_pressed"]
